--- a/vrpages/templates/vrpages/send_email.html
+++ b/vrpages/templates/vrpages/send_email.html
@@ -1,9 +1,29 @@
 {% extends 'layout.html' %}
+{% load widget_tweaks %}
 
 {% block title %}Send Email{% endblock %}
 
 {% block content %}
     <div class="container">
         <h2>Send Email Messages</h2>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+            {% endfor %}
+
+            {% for field in form.visible_fields %}
+                <div class="form-group">
+                    <label for="{{ field.id_for_label }}"><strong>{{ field.label|title }}:</strong></label>
+                    {{ field|add_class:'form-control' }}
+                    {% for error in field.errors %}
+                        <span class="help-block">{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% endfor %}
+            <div class="form-group">
+                <button type="submit" class="btn btn-success btn-lg">Send</button>
+            </div>
+        </form>
     </div>
 {% endblock %}
