--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="#">Templates</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="#">Messages</a>
+            <a class="nav-link" href="{% url 'vrpages:messages_list' %}">Messages</a>
           </li>
           <li class="nav-item mx-3">
             <a class="nav-link" href="#">Subscriptions</a>
