--- a/vrpages/templates/vrpages/send_email.html
+++ b/vrpages/templates/vrpages/send_email.html
@@ -25,5 +25,6 @@
                 <button type="submit" class="btn btn-success btn-lg">Send</button>
             </div>
         </form>
+        {{ polished_url }}
     </div>
 {% endblock %}
