--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item mx-3 active">
-            <a class="nav-link" href="#">VR Pages<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'vrpages:vrpages_list' %}">VR Pages<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item mx-3">
             <a class="nav-link" href="#">Uploads</a>
