--- a/vrpages/templates/vrpages/messages_list.html
+++ b/vrpages/templates/vrpages/messages_list.html
@@ -17,7 +17,7 @@
             <tbody>
                 {% for message in messages %}
                 <tr>
-                    <th scope="row">{{ message.pk }}</th>
+                    <th scope="row">{{ forloop.counter }}</th>
                     <td><a href="{% url 'vrpages:send_email' pk=message.vrpage_id template_type=message.template_type %}">{{ message }}</a></td>
                     <td>{{ message.template_type }}</td>
                     <td>{{ message.vrpage}}</td>
