--- a/vrpages/templates/vrpages/vrpage_detail.html
+++ b/vrpages/templates/vrpages/vrpage_detail.html
@@ -33,8 +33,8 @@
                 </tr>
             </tbody>
         </table>
-        <a href="{% url 'vrpages:vrpages_list' %}"><button type="button" class="btn btn-primary">Go Back</button></a>
-        <button type="button" class="btn btn-success">Edit</button>
-        <button type="button" class="btn btn-danger">Delete</button>
+        <a class="btn btn-primary" href="{% url 'vrpages:vrpages_list' %}" role="button">Go Back</a>
+        <a class="btn btn-success" href="{% url 'vrpages:update_vrpage' pk=vrpage.pk %}" role="button">Edit</a>
+        <a class="btn btn-danger" href="#" role="button">Delete</a>
     </div>
 {% endblock %}
