--- a/vrpages/templates/vrpages/vrpages_list.html
+++ b/vrpages/templates/vrpages/vrpages_list.html
@@ -20,7 +20,7 @@
             <tbody>
                 {% for vrpage in vrpages %}
                 <tr>
-                    <th scope="row">{{ vrpage.pk }}</th>
+                    <th scope="row">{{ forloop.counter }}</th>
                     <td><a href="{% url 'vrpages:vrpage_detail' pk=vrpage.pk %}">{{ vrpage }}</a></td>
                     <td>{{ vrpage.email_address }}</td>
                     <td>{{ vrpage.email_username }}</td>
@@ -31,6 +31,6 @@
                 {% endfor %}
             </tbody>
         </table>
-        <a href="#"><button type="button" class="btn btn-success">Add VR Page</button></a>
+        <a href="{% url 'vrpages:create_vrpage' %}"><button type="button" class="btn btn-success">Add VR Page</button></a>
     </div>
 {% endblock %}
