can now add, edit and delete message templates

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="#">Uploads</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="#">Templates</a>
+            <a class="nav-link" href="{% url 'vrpages:templates_list' %}">Templates</a>
           </li>
           <li class="nav-item mx-3">
             <a class="nav-link" href="{% url 'vrpages:messages_list' %}">Messages</a>
