--- a/vrpages/templates/vrpages/vrpages_list.html
+++ b/vrpages/templates/vrpages/vrpages_list.html
@@ -31,6 +31,6 @@
                 {% endfor %}
             </tbody>
         </table>
-        <a href="{% url 'vrpages:create_vrpage' %}"><button type="button" class="btn btn-success">Add VR Page</button></a>
+        <a class="btn btn-success" href="{% url 'vrpages:create_vrpage' %}" role="button">Add VR Page</a>
     </div>
 {% endblock %}
