--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="{% url 'vrpages:messages_list' %}">Messages</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="#">Subscriptions</a>
+            <a class="nav-link" href="{% url 'vrpages:unsubscribes_list' %}">Subscriptions</a>
           </li>
           <li class="nav-item mx-3">
             <a class="nav-link" href="#">Logout</a>
