--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">EFlowerLite</a>
+      <a class="navbar-brand" href="{% url 'home_page' %}">EFlowerLite</a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item mx-3 active">
