--- a/vrpages/templates/vrpages/unsubscribes_list.html
+++ b/vrpages/templates/vrpages/unsubscribes_list.html
@@ -33,7 +33,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <a class="btn btn-danger" href="#" role="button">Unsubscribe Permanently</a>
+        <a class="btn btn-danger" href="{% url 'vrpages:unsubscribe_permanently' %}" role="button">Unsubscribe Permanently</a>
         <a class="btn btn-primary" href="{% url 'vrpages:unsubscribe_from_vrpage' %}" role="button">Remove Email From VR Page</a>
     </div>
 {% endblock %}
