--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="{% url 'vrpages:vrpages_list' %}">VR Pages<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="#">Uploads</a>
+            <a class="nav-link" href="{% url 'vrpages:upload' %}">Uploads</a>
           </li>
           <li class="nav-item mx-3">
             <a class="nav-link" href="{% url 'vrpages:templates_list' %}">Templates</a>
