--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="{% url 'vrpages:unsubscribes_list' %}">Subscriptions</a>
           </li>
           <li class="nav-item mx-3">
-            <a class="nav-link" href="#">Logout</a>
+            <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
           </li>
         </ul>
       </div>
